# auto-evolve-autoresearch-modal

./: .gitignore  README.md  justfile
auto-evolve-cli/: README.md  justfile  package.json  tsconfig.json  vitest.config.ts
auto-evolve-cli/src/: index.ts
auto-evolve-cli/src/commands/: baseline.ts  config.ts  init.ts  loop.ts  report.ts  status.ts
auto-evolve-cli/src/lib/: agent.ts  baseline.ts  config.ts  experiment.ts  git.ts  hypothesize.ts  loop.ts  program-parser.ts  report.ts  runner.ts  schemas.ts  status.ts  store.ts
auto-evolve-cli/tests/commands/: baseline.test.ts
auto-evolve-cli/tests/lib/: agent.test.ts  config.test.ts  experiment.test.ts  git.test.ts  history.test.ts  hypotheses-store.test.ts  hypothesize.test.ts  loop-integration.test.ts  loop.test.ts  (+5 more)
autoresearch-modal/: .gitignore  README.md  justfile  modal_app.py  modal_runner.py  prepare.py  program.md  pyproject.toml  results.tsv  train.py
autoresearch-modal/.auto-evolve/: baseline.json  best.json  config.json  history.jsonl  hypotheses.json
autoresearch-modal/.auto-evolve/llm-calls/: 2026-04-08T13-01-35-578Z-hypothesize.md
autoresearch-modal/experiments/5d58ccab-87b5-4176-8b81-532465a88688/: patch.diff  prompt.md
autoresearch-modal/experiments/73513343-b003-4cc0-b36e-1d4fe4065257/: patch.diff  prompt.md
autoresearch-modal/experiments/cc39329b-57ad-4d07-a97f-889bbee5026d/: patch.diff  prompt.md
autoresearch-modal/experiments/e90ece81-aaca-4a32-a3db-c420f6628af8/: patch.diff  prompt.md
autoresearch-modal/experiments/f9bca313-991a-43d5-9be9-0a0b22a6be0a/: patch.diff  prompt.md
