[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kernels>=0.12.3",
    "matplotlib>=3.10.8",
    "modal>=1.4.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=23.0.0",
    "requests>=2.33.1",
    "rustbpe>=0.1.0",
    "tiktoken>=0.12.0",
    "torch==2.11.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"train.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
